--- a/index.html
+++ b/index.html
@@ -16,13 +16,95 @@
   </header>
 
   <main>
-    <h1>
-      Internet deve essere al servizio del ''bene pubblico'':il manifesto di Tim Berners-Lee
-    </h1>
-    <p>
-      Stritto da <a href="#">The Booleaner</a><br>
-      il 10/10/2020
-    </p>
+    <section class="first-section">
+      <h1>
+        Internet deve essere al servizio del ''bene pubblico'':il manifesto di Tim Berners-Lee
+      </h1>
+      <p>
+        Stritto da <a href="#">The Booleaner</a><br>
+        il 10/10/2020
+      </p>
+
+      <div">
+        <img src="assets/img/tim-1.jpg" alt="Tim1">
+        <img src="assets/img/tim-2.jpg" alt="Tim2">
+        <br>
+        </div>
+
+        <em>1St Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+          2nd Photo: Wikimedia, by Paul Clarke </em>
+    </section>
+
+    <section class="central-section">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, doloribus. Quia accusantium optio
+        tenetur, earum ratione aut, facilis omnis debitis reprehenderit blanditiis maxime itaque excepturi officia id
+        non ea repudiandae?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo minima maiores iusto
+        totam atque architecto facilis illo, distinctio magnam, esse quod illum in, ut et dicta soluta rerum quidem
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptatibus exercitationem libero doloribus aut
+        harum officiis voluptas similique, molestias laudantium, quae magnam at fugit enim excepturi necessitatibus
+        corporis praesentium? A nesciunt sunt accusamus saepe vel tempore pariatur vero doloremque. Corporis enim, unde
+        beatae labore quas repudiandae dolores minima sequi odio sint laboriosam quis cupiditate sit maxime itaque hic
+        facilis. Ex, pariatur. <span class="span-main">Unde beatae iusto et deserunt quae incidunt assumenda officia
+          neque nam quas nemo quod,
+          odit totam corrupti molestiae</span> sunt magnam! Libero nobis laudantium eligendi rem repudiandae iure quae
+        deleniti
+        maiores doloribus, accusamus culpa minus maxime, doloremque aspernatur. Quo aut soluta ab, quis similique
+        molestias iusto aliquid quia quibusdam itaque quos et. Laudantium harum neque cum aspernatur rerum. Voluptate
+        recusandae dicta, ipsum dolorum eius quidem, modi provident maxime eum doloribus dolore ipsam? Soluta, nisi
+        tempore! Ab rerum voluptatum repudiandae officia vero voluptatem inventore alias laboriosam dolorum accusamus
+        iure nobis porro in quibusdam omnis quo eos, aspernatur eius enim expedita neque culpa. Dolores nemo ducimus
+        dicta aspernatur cupiditate tenetur omnis asperiores autem accusamus unde non quisquam nisi rerum ab id earum
+        itaque voluptatibus, rem fugiat. Error non reiciendis modi, ducimus veritatis ad illo vitae placeat nobis
+        quaerat dolores quisquam voluptatibus, voluptates eos facilis doloribus reprehenderit! Ad possimus facere rem
+        repudiandae quod temporibus, culpa assumenda optio non quidem cumque mollitia necessitatibus impedit dolore ea
+        laborum quos aliquam modi dolor velit recusandae provident quibusdam. Totam, numquam. Voluptate aliquam corporis
+        natus cumque consectetur repellat reiciendis mollitia eaque, eius delectus dolore quam. Qui distinctio nostrum
+        enim quasi nobis id ea molestiae velit laboriosam minima odio atque mollitia iusto, veniam eligendi error, saepe
+        vel, natus assumenda est? Sunt enim incidunt doloremque explicabo. Quos commodi non veniam error porro minus!
+        Eligendi eveniet quis ullam dolor praesentium quia quidem impedit vero aliquam porro sapiente necessitatibus
+        magnam, asperiores inventore, atque vitae dolore eaque ipsam laudantium sit. Architecto vero alias culpa laborum
+        nemo esse odit, ex ipsa odio suscipit illum. Ipsum mollitia ea deserunt nulla pariatur repellat, explicabo sunt
+        eos dolorum? Dolorum alias vero quidem eius harum doloremque aspernatur tenetur sunt modi hic ex ab atque
+        repellendus praesentium, recusandae, illo ratione quaerat commodi necessitatibus. Deserunt autem rem a
+        consequatur ullam hic maiores nemo in, provident, iure nulla! Eligendi temporibus, mollitia labore nulla, natus
+        totam iure nihil tempora ut architecto numquam voluptatum. Impedit, expedita unde minima modi excepturi magni?
+        Error accusamus voluptates aliquid itaque optio distinctio nemo fuga minima nihil dolor iure magnam ea quisquam,
+        vel molestias magni atque, dicta repellat quasi nesciunt eum iste libero eius non. Illo, tenetur natus. Aliquam
+        eaque autem explicabo, pariatur culpa dicta veritatis doloremque sit iste obcaecati quo esse odit earum eligendi
+        fuga eum facere quidem quia odio neque blanditiis officia? Consectetur iure doloremque ducimus soluta sint minus
+        quam atque, voluptatibus nam ipsum. Recusandae dolores non cupiditate ipsa voluptates minus at voluptatibus aut
+        doloremque veritatis sequi minima ratione nulla unde impedit corporis modi tempora porro sapiente deserunt, quas
+        consequatur eveniet ut consectetur! Doloribus dignissimos possimus, enim aperiam iusto voluptates assumenda
+        quisquam consequatur voluptas aliquam similique.
+        quaerat!</p>
+
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo assumenda animi, maxime expedita veritatis
+          accusamus enim culpa veniam alias quia.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta magni ipsam sed dolore ab rerum eius
+          voluptate soluta aperiam esse.</li>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus hic rerum amet molestiae? Illum iure modi
+          vel! Quibusdam, natus perspiciatis!</li>
+      </ul>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Lorem ipsum dolor</th>
+            <th>Lorem ipsum dolor</th>
+            <th>Lorem ipsum dolor</th>
+          </tr>
+        </thead>
+
+        <tbody>
+
+        </tbody>
+
+        <tfoot>
+
+        </tfoot>
+      </table>
+    </section>
   </main>
 </body>
 
