--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
 
     </section>
   </main>
+
+  <footer>
+    <h3>Potrebbero interessarti</h3>
+    <span class="span-monitor">Lorem ipsum dolor</span>
+    <br>
+    <span class="span-graph">Lorem ipsum dolor</span>
+  </footer>
 </body>
 
 </html>
