--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 
   <footer>
     <h3>Potrebbero interessarti</h3>
-    <span class="span-monitor">Lorem ipsum dolor</span>
+    <div class="span-monitor">Lorem ipsum dolor</div>
     <br>
-    <span class="span-graph">Lorem ipsum dolor</span>
+    <div class="span-graph">Lorem ipsum dolor</div>
   </footer>
 </body>
 
