--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="intestazione">
-      <img src="assets/img/logo.svg" alt="the booleaner">
+      <img src="assets/img/logo.svg" alt="the booleaner logo">
     </div>
   </header>
 
@@ -31,8 +31,10 @@
         <br>
         </div>
 
+
         <em>1St Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
           2nd Photo: Wikimedia, by Paul Clarke </em>
+
     </section>
 
     <section class="central-section">
@@ -57,25 +59,7 @@
         itaque voluptatibus, rem fugiat. Error non reiciendis modi, ducimus veritatis ad illo vitae placeat nobis
         quaerat dolores quisquam voluptatibus, voluptates eos facilis doloribus reprehenderit! Ad possimus facere rem
         repudiandae quod temporibus, culpa assumenda optio non quidem cumque mollitia necessitatibus impedit dolore ea
-        laborum quos aliquam modi dolor velit recusandae provident quibusdam. Totam, numquam. Voluptate aliquam corporis
-        natus cumque consectetur repellat reiciendis mollitia eaque, eius delectus dolore quam. Qui distinctio nostrum
-        enim quasi nobis id ea molestiae velit laboriosam minima odio atque mollitia iusto, veniam eligendi error, saepe
-        vel, natus assumenda est? Sunt enim incidunt doloremque explicabo. Quos commodi non veniam error porro minus!
-        Eligendi eveniet quis ullam dolor praesentium quia quidem impedit vero aliquam porro sapiente necessitatibus
-        magnam, asperiores inventore, atque vitae dolore eaque ipsam laudantium sit. Architecto vero alias culpa laborum
-        nemo esse odit, ex ipsa odio suscipit illum. Ipsum mollitia ea deserunt nulla pariatur repellat, explicabo sunt
-        eos dolorum? Dolorum alias vero quidem eius harum doloremque aspernatur tenetur sunt modi hic ex ab atque
-        repellendus praesentium, recusandae, illo ratione quaerat commodi necessitatibus. Deserunt autem rem a
-        consequatur ullam hic maiores nemo in, provident, iure nulla! Eligendi temporibus, mollitia labore nulla, natus
-        totam iure nihil tempora ut architecto numquam voluptatum. Impedit, expedita unde minima modi excepturi magni?
-        Error accusamus voluptates aliquid itaque optio distinctio nemo fuga minima nihil dolor iure magnam ea quisquam,
-        vel molestias magni atque, dicta repellat quasi nesciunt eum iste libero eius non. Illo, tenetur natus. Aliquam
-        eaque autem explicabo, pariatur culpa dicta veritatis doloremque sit iste obcaecati quo esse odit earum eligendi
-        fuga eum facere quidem quia odio neque blanditiis officia? Consectetur iure doloremque ducimus soluta sint minus
-        quam atque, voluptatibus nam ipsum. Recusandae dolores non cupiditate ipsa voluptates minus at voluptatibus aut
-        doloremque veritatis sequi minima ratione nulla unde impedit corporis modi tempora porro sapiente deserunt, quas
-        consequatur eveniet ut consectetur! Doloribus dignissimos possimus, enim aperiam iusto voluptates assumenda
-        quisquam consequatur voluptas aliquam similique.
+        laborum quos aliquam modi dolor velit recusandae
         quaerat!</p>
 
       <ul>
