--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <tr>
             <th>Lorem ipsum dolor</th>
             <th>Lorem ipsum dolor</th>
-            <th>Lorem ipsum dolor</th>
+            <th class="cinquanta">Lorem ipsum dolor</th>
           </tr>
         </thead>
 
